[gd_scene load_steps=6 format=3 uid="uid://player_scene"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_player"]
[ext_resource type="PackedScene" uid="uid://cri5pqbr1v8f5" path="res://assets/characters/Paladin J Nordstrom.fbx" id="2_model"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.35
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_attack"]
size = Vector3(1.5, 1.5, 2)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="Model" parent="." instance=ExtResource("2_model")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 3.5)
current = true
fov = 70.0

[node name="InteractionRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -2.5)
collision_mask = 28

[node name="AttackArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
collision_layer = 0
collision_mask = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("BoxShape3D_attack")
